--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,17 @@ project_urls =
 console_scripts =
     precli = precli.cli.main:main
 
+precli.parsers =
+    # precli/parsers/java.py
+    java = precli.parsers.java:Java
+
+    # precli/parsers/python.py
+    python = precli.parsers.python:Python
+
+precli.rules.python =
+    # precli/rules/python/lang/yaml_load.py
+    yaml_load = precli.rules.python.lang.yaml_load:yaml_load
+
 [build_sphinx]
 all_files = 1
 build-dir = doc/build
