Make use of importlib instead of pbr
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/tox.ini
+++ b/tox.ini
@@ -24,3 +24,22 @@ commands =
 whitelist_externals =
     find
 passenv = http_proxy, HTTP_PROXY, https_proxy, HTTPS_PROXY, no_proxy, NO_PROXY
+
+[testenv:format]
+skip_install = true
+deps =
+    pre-commit
+commands =
+    pre-commit run --all-files --show-diff-on-failure
+
+[testenv:pep8]
+ignore_errors = true
+deps = {[testenv]deps}
+       .
+usedevelop = False
+commands = flake8 {posargs} precli
+           flake8 {posargs} tests
+           {[testenv:pylint]commands}
+
+[testenv:pylint]
+commands = -pylint --rcfile=pylintrc precli
