--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,4 @@
+# Copyright 2022 Secure Saurce LLC
 # tox (https://tox.readthedocs.io/) is a tool for running tests
 # in multiple virtualenvs. This configuration file will run the
 # test suite on all supported python versions. To use it, "pip install tox"
@@ -22,4 +23,4 @@ commands =
     stestr run {posargs}
 whitelist_externals =
     find
-passenv = http_proxy HTTP_PROXY https_proxy HTTPS_PROXY no_proxy NO_PROXY
+passenv = http_proxy, HTTP_PROXY, https_proxy, HTTPS_PROXY, no_proxy, NO_PROXY
