--- a/setup.cfg
+++ b/setup.cfg
@@ -31,8 +31,11 @@ precli.parsers =
     python = precli.parsers.python:Python
 
 precli.rules.python =
-    # precli/rules/python/lang/yaml_load.py
-    yaml_load = precli.rules.python.lang.yaml_load:yaml_load
+    # precli/rules/python/lang/assert/assert.py
+    assert = precli.rules.python.lang.assert.assert:Assert
+
+    # precli/rules/python/third_party/PyYAML/yaml_load.py
+    yaml_load = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
 [build_sphinx]
 all_files = 1
