--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,6 @@
 [tox]
 minversion = 3.2.0
 envlist = py311
-requires =
-    tox<4
 
 [testenv]
 usedevelop = True
@@ -33,13 +31,14 @@ commands =
     pre-commit run --all-files --show-diff-on-failure
 
 [testenv:pep8]
+skip_install = true
 ignore_errors = true
 deps = {[testenv]deps}
        .
 usedevelop = False
 commands = flake8 {posargs} precli
            flake8 {posargs} tests
-           {[testenv:pylint]commands}
+           -{[testenv:pylint]commands}
 
 [testenv:pylint]
 commands = -pylint --rcfile=pylintrc precli
