--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ deps =
 commands =
     find precli -type f -name "*.pyc" -delete
     stestr run {posargs}
-whitelist_externals =
+allowlist_externals =
     find
 passenv = http_proxy, HTTP_PROXY, https_proxy, HTTPS_PROXY, no_proxy, NO_PROXY
 
