More rules around deserialize
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,24 @@ precli.rules.python =
     # precli/rules/python/lang/assert/assert.py
     assert = precli.rules.python.lang.assert.assert:Assert
 
+    # precli/rules/python/lang/marshal/marshal_load.py
+    marshal_load = precli.rules.python.lang.marshal.marshal_load:MarshalLoad
+
+    # precli/rules/python/lang/pickle/pickle_load.py
+    pickle_load = precli.rules.python.lang.pickle.pickle_load:PickleLoad
+
+    # precli/rules/python/lang/shelve/shelve_open.py
+    shelve_open = precli.rules.python.lang.shelve.shelve_open:ShelveOpen
+
+    # precli/rules/python/third_party/dill/dill_load.py
+    dill_load = precli.rules.python.third_party.dill.dill_load:DillLoad
+
+    # precli/rules/python/third_party/jsonpickle/jsonpickle_decode.py
+    jsonpickle_decode = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
+
+    # precli/rules/python/third_party/pandas/pandas_read_pickle.py
+    pandas_read_pickle = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
+
     # precli/rules/python/third_party/PyYAML/yaml_load.py
     yaml_load = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
