A fix for numerous things
* Added new rule for crypt.crypt crypt.mksalt
* Added new rule for hashlib.md5 weak hashes
* Fix the resolving of qualified attribute names
* Removed short_descr argument of the rule. Uses CWE description
  instead
* Fix the literal value of strings

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,12 @@ precli.rules.python =
     # precli/rules/python/lang/assert/assert.py
     assert = precli.rules.python.lang.assert.assert:Assert
 
+    # precli/rules/python/lang/crypt/crypt_weak_hash.py
+    crypt_weak_hash = precli.rules.python.lang.crypt.crypt_weak_hash:CryptWeakHash
+
+    # precli/rules/python/lang/hashlib/haslib_weak_hash.py
+    haslib_weak_hash = precli.rules.python.lang.hashlib.hashlib_weak_hash:HashlibWeakHash
+
     # precli/rules/python/lang/marshal/marshal_load.py
     marshal_load = precli.rules.python.lang.marshal.marshal_load:MarshalLoad
 
