Add more weak hash checks
* Pycrypto weak hashes
* Pycryptodomex weak hashes
* crypt weak hashes

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,12 @@ precli.rules.python =
     # precli/rules/python/third_party/pandas/pandas_read_pickle.py
     pandas_read_pickle = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
 
+    # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
+    pycrypto_weak_hash = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+
+    # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
+    pycryptodomex_weak_hash = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+
     # precli/rules/python/third_party/PyYAML/yaml_load.py
     yaml_load = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
