Add cryptography weak hashes check
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,9 @@ precli.rules.python =
     # precli/rules/python/lang/shelve/shelve_open.py
     shelve_open = precli.rules.python.lang.shelve.shelve_open:ShelveOpen
 
+    # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
+    cryptography_weak_hash = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
+
     # precli/rules/python/third_party/dill/dill_load.py
     dill_load = precli.rules.python.third_party.dill.dill_load:DillLoad
 
