--- a/setup.cfg
+++ b/setup.cfg
@@ -37,8 +37,11 @@ precli.rules.python =
     # precli/rules/python/lang/crypt/crypt_weak_hash.py
     crypt_weak_hash = precli.rules.python.lang.crypt.crypt_weak_hash:CryptWeakHash
 
-    # precli/rules/python/lang/hashlib/haslib_weak_hash.py
-    haslib_weak_hash = precli.rules.python.lang.hashlib.hashlib_weak_hash:HashlibWeakHash
+    # precli/rules/python/lang/hashlib/hashlib_weak_hash.py
+    hashlib_weak_hash = precli.rules.python.lang.hashlib.hashlib_weak_hash:HashlibWeakHash
+
+    # precli/rules/python/lang/hmac/hmac_weak_hash.py
+    hmac_weak_hash = precli.rules.python.lang.hmac.hmac_weak_hash:HmacWeakHash
 
     # precli/rules/python/lang/marshal/marshal_load.py
     marshal_load = precli.rules.python.lang.marshal.marshal_load:MarshalLoad
