Set the rule ID in the setup.cfg
This will make it easier to manage the rule IDs so one is not
accidently reused.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,46 +32,46 @@ precli.parsers =
 
 precli.rules.python =
     # precli/rules/python/lang/assert/assert.py
-    assert = precli.rules.python.lang.assert.assert:Assert
+    pre001 = precli.rules.python.lang.assert.assert:Assert
 
     # precli/rules/python/lang/crypt/crypt_weak_hash.py
-    crypt_weak_hash = precli.rules.python.lang.crypt.crypt_weak_hash:CryptWeakHash
+    pre002 = precli.rules.python.lang.crypt.crypt_weak_hash:CryptWeakHash
 
     # precli/rules/python/lang/hashlib/hashlib_weak_hash.py
-    hashlib_weak_hash = precli.rules.python.lang.hashlib.hashlib_weak_hash:HashlibWeakHash
+    pre003 = precli.rules.python.lang.hashlib.hashlib_weak_hash:HashlibWeakHash
 
     # precli/rules/python/lang/hmac/hmac_weak_hash.py
-    hmac_weak_hash = precli.rules.python.lang.hmac.hmac_weak_hash:HmacWeakHash
+    pre004 = precli.rules.python.lang.hmac.hmac_weak_hash:HmacWeakHash
 
     # precli/rules/python/lang/marshal/marshal_load.py
-    marshal_load = precli.rules.python.lang.marshal.marshal_load:MarshalLoad
+    pre005 = precli.rules.python.lang.marshal.marshal_load:MarshalLoad
 
     # precli/rules/python/lang/pickle/pickle_load.py
-    pickle_load = precli.rules.python.lang.pickle.pickle_load:PickleLoad
+    pre006 = precli.rules.python.lang.pickle.pickle_load:PickleLoad
 
     # precli/rules/python/lang/shelve/shelve_open.py
-    shelve_open = precli.rules.python.lang.shelve.shelve_open:ShelveOpen
+    pre007 = precli.rules.python.lang.shelve.shelve_open:ShelveOpen
 
     # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
-    cryptography_weak_hash = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
+    pre301 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
 
     # precli/rules/python/third_party/dill/dill_load.py
-    dill_load = precli.rules.python.third_party.dill.dill_load:DillLoad
+    pre302 = precli.rules.python.third_party.dill.dill_load:DillLoad
 
     # precli/rules/python/third_party/jsonpickle/jsonpickle_decode.py
-    jsonpickle_decode = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
+    pre303 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
 
     # precli/rules/python/third_party/pandas/pandas_read_pickle.py
-    pandas_read_pickle = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
+    pre304 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
-    pycrypto_weak_hash = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    pre305 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
-    pycryptodomex_weak_hash = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    pre306 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    yaml_load = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    pre307 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
 [build_sphinx]
 all_files = 1
