Fix up the match call functions
No need to make separate calls to the match function since
it allows a list of function names as an argument.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,20 +37,29 @@ precli.rules.python =
     # precli/rules/python/lang/crypt/crypt_weak_hash.py
     pre002 = precli.rules.python.lang.crypt.crypt_weak_hash:CryptWeakHash
 
+    # precli/rules/python/lang/ftplib/ftplib_cleartext.py
+    pre003 = precli.rules.python.lang.ftplib.ftplib_cleartext:FtplibCleartext
+
     # precli/rules/python/lang/hashlib/hashlib_weak_hash.py
-    pre003 = precli.rules.python.lang.hashlib.hashlib_weak_hash:HashlibWeakHash
+    pre004 = precli.rules.python.lang.hashlib.hashlib_weak_hash:HashlibWeakHash
 
     # precli/rules/python/lang/hmac/hmac_weak_hash.py
-    pre004 = precli.rules.python.lang.hmac.hmac_weak_hash:HmacWeakHash
+    pre005 = precli.rules.python.lang.hmac.hmac_weak_hash:HmacWeakHash
+
+    # precli/rules/python/lang/json/json_load.py
+    pre006 = precli.rules.python.lang.json.json_load:JsonLoad
 
     # precli/rules/python/lang/marshal/marshal_load.py
-    pre005 = precli.rules.python.lang.marshal.marshal_load:MarshalLoad
+    pre007 = precli.rules.python.lang.marshal.marshal_load:MarshalLoad
 
     # precli/rules/python/lang/pickle/pickle_load.py
-    pre006 = precli.rules.python.lang.pickle.pickle_load:PickleLoad
+    pre008 = precli.rules.python.lang.pickle.pickle_load:PickleLoad
 
     # precli/rules/python/lang/shelve/shelve_open.py
-    pre007 = precli.rules.python.lang.shelve.shelve_open:ShelveOpen
+    pre009 = precli.rules.python.lang.shelve.shelve_open:ShelveOpen
+
+    # precli/rules/python/lang/telnetlib/telnetlib_cleartext.py
+    pre010 = precli.rules.python.lang.telnetlib.telnetlib_cleartext:TelnetlibCleartext
 
     # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
     pre301 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
@@ -64,14 +73,17 @@ precli.rules.python =
     # precli/rules/python/third_party/pandas/pandas_read_pickle.py
     pre304 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
 
+    # precli/rules/python/third_party/pyghmi/pyghmi_cleartext.py
+    pre305 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
+
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
-    pre305 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    pre306 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
-    pre306 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    pre307 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    pre307 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    pre308 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
 [build_sphinx]
 all_files = 1
