Early implementation of symbol table
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,17 +72,20 @@ precli.rules.python =
     # precli/rules/python/third_party/pandas/pandas_read_pickle.py
     pre304 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
 
+    # precli/rules/python/third_party/paramiko/paramiko_no_host_key_verify.py
+    pre305 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
+
     # precli/rules/python/third_party/pyghmi/pyghmi_cleartext.py
-    pre305 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
+    pre306 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
-    pre306 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    pre307 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
-    pre307 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    pre308 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    pre308 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    pre309 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
 [build_sphinx]
 all_files = 1
