Upper case the rule IDs
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,61 +31,61 @@ precli.parsers =
 
 precli.rules.python =
     # precli/rules/python/lang/assert/assert.py
-    pre001 = precli.rules.python.lang.assert.assert:Assert
+    PRE001 = precli.rules.python.lang.assert.assert:Assert
 
     # precli/rules/python/lang/crypt/crypt_weak_hash.py
-    pre002 = precli.rules.python.lang.crypt.crypt_weak_hash:CryptWeakHash
+    PRE002 = precli.rules.python.lang.crypt.crypt_weak_hash:CryptWeakHash
 
     # precli/rules/python/lang/ftplib/ftplib_cleartext.py
-    pre003 = precli.rules.python.lang.ftplib.ftplib_cleartext:FtplibCleartext
+    PRE003 = precli.rules.python.lang.ftplib.ftplib_cleartext:FtplibCleartext
 
     # precli/rules/python/lang/hashlib/hashlib_weak_hash.py
-    pre004 = precli.rules.python.lang.hashlib.hashlib_weak_hash:HashlibWeakHash
+    PRE004 = precli.rules.python.lang.hashlib.hashlib_weak_hash:HashlibWeakHash
 
     # precli/rules/python/lang/hmac/hmac_weak_hash.py
-    pre005 = precli.rules.python.lang.hmac.hmac_weak_hash:HmacWeakHash
+    PRE005 = precli.rules.python.lang.hmac.hmac_weak_hash:HmacWeakHash
 
     # precli/rules/python/lang/json/json_load.py
-    pre006 = precli.rules.python.lang.json.json_load:JsonLoad
+    PRE006 = precli.rules.python.lang.json.json_load:JsonLoad
 
     # precli/rules/python/lang/marshal/marshal_load.py
-    pre007 = precli.rules.python.lang.marshal.marshal_load:MarshalLoad
+    PRE007 = precli.rules.python.lang.marshal.marshal_load:MarshalLoad
 
     # precli/rules/python/lang/pickle/pickle_load.py
-    pre008 = precli.rules.python.lang.pickle.pickle_load:PickleLoad
+    PRE008 = precli.rules.python.lang.pickle.pickle_load:PickleLoad
 
     # precli/rules/python/lang/shelve/shelve_open.py
-    pre009 = precli.rules.python.lang.shelve.shelve_open:ShelveOpen
+    PRE009 = precli.rules.python.lang.shelve.shelve_open:ShelveOpen
 
     # precli/rules/python/lang/telnetlib/telnetlib_cleartext.py
-    pre010 = precli.rules.python.lang.telnetlib.telnetlib_cleartext:TelnetlibCleartext
+    PRE010 = precli.rules.python.lang.telnetlib.telnetlib_cleartext:TelnetlibCleartext
 
     # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
-    pre301 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
+    PRE301 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
 
     # precli/rules/python/third_party/dill/dill_load.py
-    pre302 = precli.rules.python.third_party.dill.dill_load:DillLoad
+    PRE302 = precli.rules.python.third_party.dill.dill_load:DillLoad
 
     # precli/rules/python/third_party/jsonpickle/jsonpickle_decode.py
-    pre303 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
+    PRE303 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
 
     # precli/rules/python/third_party/pandas/pandas_read_pickle.py
-    pre304 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
+    PRE304 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
 
     # precli/rules/python/third_party/paramiko/paramiko_no_host_key_verify.py
-    pre305 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
+    PRE305 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
 
     # precli/rules/python/third_party/pyghmi/pyghmi_cleartext.py
-    pre306 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
+    PRE306 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
-    pre307 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    PRE307 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
-    pre308 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    PRE308 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    pre309 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    PRE309 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
 [build_sphinx]
 all_files = 1
