--- a/setup.cfg
+++ b/setup.cfg
@@ -30,35 +30,35 @@ precli.parsers =
     python = precli.parsers.python:Python
 
 precli.rules.python =
-    # precli/rules/python/lang/assert/assert.py
-    PRE001 = precli.rules.python.lang.assert.assert:Assert
+    # precli/rules/python/stdlib/assert/assert.py
+    PRE001 = precli.rules.python.stdlib.assert.assert:Assert
 
-    # precli/rules/python/lang/crypt/crypt_weak_hash.py
-    PRE002 = precli.rules.python.lang.crypt.crypt_weak_hash:CryptWeakHash
+    # precli/rules/python/stdlib/crypt/crypt_weak_hash.py
+    PRE002 = precli.rules.python.stdlib.crypt.crypt_weak_hash:CryptWeakHash
 
-    # precli/rules/python/lang/ftplib/ftplib_cleartext.py
-    PRE003 = precli.rules.python.lang.ftplib.ftplib_cleartext:FtplibCleartext
+    # precli/rules/python/stdlib/ftplib/ftplib_cleartext.py
+    PRE003 = precli.rules.python.stdlib.ftplib.ftplib_cleartext:FtplibCleartext
 
-    # precli/rules/python/lang/hashlib/hashlib_weak_hash.py
-    PRE004 = precli.rules.python.lang.hashlib.hashlib_weak_hash:HashlibWeakHash
+    # precli/rules/python/stdlib/hashlib/hashlib_weak_hash.py
+    PRE004 = precli.rules.python.stdlib.hashlib.hashlib_weak_hash:HashlibWeakHash
 
-    # precli/rules/python/lang/hmac/hmac_weak_hash.py
-    PRE005 = precli.rules.python.lang.hmac.hmac_weak_hash:HmacWeakHash
+    # precli/rules/python/stdlib/hmac/hmac_weak_hash.py
+    PRE005 = precli.rules.python.stdlib.hmac.hmac_weak_hash:HmacWeakHash
 
-    # precli/rules/python/lang/json/json_load.py
-    PRE006 = precli.rules.python.lang.json.json_load:JsonLoad
+    # precli/rules/python/stdlib/json/json_load.py
+    PRE006 = precli.rules.python.stdlib.json.json_load:JsonLoad
 
-    # precli/rules/python/lang/marshal/marshal_load.py
-    PRE007 = precli.rules.python.lang.marshal.marshal_load:MarshalLoad
+    # precli/rules/python/stdlib/marshal/marshal_load.py
+    PRE007 = precli.rules.python.stdlib.marshal.marshal_load:MarshalLoad
 
-    # precli/rules/python/lang/pickle/pickle_load.py
-    PRE008 = precli.rules.python.lang.pickle.pickle_load:PickleLoad
+    # precli/rules/python/stdlib/pickle/pickle_load.py
+    PRE008 = precli.rules.python.stdlib.pickle.pickle_load:PickleLoad
 
-    # precli/rules/python/lang/shelve/shelve_open.py
-    PRE009 = precli.rules.python.lang.shelve.shelve_open:ShelveOpen
+    # precli/rules/python/stdlib/shelve/shelve_open.py
+    PRE009 = precli.rules.python.stdlib.shelve.shelve_open:ShelveOpen
 
-    # precli/rules/python/lang/telnetlib/telnetlib_cleartext.py
-    PRE010 = precli.rules.python.lang.telnetlib.telnetlib_cleartext:TelnetlibCleartext
+    # precli/rules/python/stdlib/telnetlib/telnetlib_cleartext.py
+    PRE010 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
 
     # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
     PRE301 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
