Add rule for _create_unverified_context
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,8 +57,11 @@ precli.rules.python =
     # precli/rules/python/stdlib/shelve/shelve_open.py
     PRE009 = precli.rules.python.stdlib.shelve.shelve_open:ShelveOpen
 
+    # precli/rules/python/stdlib/ssl/create_unverified_context.py
+    PRE010 = precli.rules.python.stdlib.ssl.create_unverified_context:CreateUnverifiedContext
+
     # precli/rules/python/stdlib/telnetlib/telnetlib_cleartext.py
-    PRE010 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
+    PRE011 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
 
     # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
     PRE301 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
