Add ssl insecure version rule
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,8 +60,11 @@ precli.rules.python =
     # precli/rules/python/stdlib/ssl/create_unverified_context.py
     PRE010 = precli.rules.python.stdlib.ssl.create_unverified_context:CreateUnverifiedContext
 
+    # precli/rules/python/stdlib/ssl/insecure_tls_version.py
+    PRE011 = precli.rules.python.stdlib.ssl.insecure_tls_version:InsecureTlsVersion
+
     # precli/rules/python/stdlib/telnetlib/telnetlib_cleartext.py
-    PRE011 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
+    PRE012 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
 
     # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
     PRE301 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
