Add rule for pyopenssl insecure methods
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -90,8 +90,11 @@ precli.rules.python =
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
     PRE308 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
+    # precli/rules/python/third_party/pyopenssl/insecure_tls_method.py
+    PRE309 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
+
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    PRE309 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    PRE310 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
 [build_sphinx]
 all_files = 1
