Add rule for requests no cert verify
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -96,6 +96,9 @@ precli.rules.python =
     # precli/rules/python/third_party/PyYAML/yaml_load.py
     PRE310 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
+    # precli/rules/python/third_party/requests/no_certificate_verify.py
+    PRE311 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
+
 [build_sphinx]
 all_files = 1
 build-dir = doc/build
