Add rule for httpx no cert verify
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,32 +72,35 @@ precli.rules.python =
     # precli/rules/python/third_party/dill/dill_load.py
     PRE302 = precli.rules.python.third_party.dill.dill_load:DillLoad
 
+    # precli/rules/python/third_party/httpx/no_certificate_verify.py
+    PRE303 = precli.rules.python.third_party.httpx.no_certificate_verify:NoCertificateVerify
+
     # precli/rules/python/third_party/jsonpickle/jsonpickle_decode.py
-    PRE303 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
+    PRE304 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
 
     # precli/rules/python/third_party/pandas/pandas_read_pickle.py
-    PRE304 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
+    PRE305 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
 
     # precli/rules/python/third_party/paramiko/paramiko_no_host_key_verify.py
-    PRE305 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
+    PRE306 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
 
     # precli/rules/python/third_party/pyghmi/pyghmi_cleartext.py
-    PRE306 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
+    PRE307 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
-    PRE307 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    PRE308 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
-    PRE308 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    PRE309 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
     # precli/rules/python/third_party/pyopenssl/insecure_tls_method.py
-    PRE309 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
+    PRE310 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
 
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    PRE310 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    PRE311 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
     # precli/rules/python/third_party/requests/no_certificate_verify.py
-    PRE311 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
+    PRE312 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
 
 [build_sphinx]
 all_files = 1
