Add rule for logging.config.listen
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,23 +48,26 @@ precli.rules.python =
     # precli/rules/python/stdlib/json/json_load.py
     PRE006 = precli.rules.python.stdlib.json.json_load:JsonLoad
 
+    # precli/rules/python/stdlib/logging/insecure_listen_config.py
+    PRE007 = precli.rules.python.stdlib.logging.insecure_listen_config:InsecureListenConfig
+
     # precli/rules/python/stdlib/marshal/marshal_load.py
-    PRE007 = precli.rules.python.stdlib.marshal.marshal_load:MarshalLoad
+    PRE008 = precli.rules.python.stdlib.marshal.marshal_load:MarshalLoad
 
     # precli/rules/python/stdlib/pickle/pickle_load.py
-    PRE008 = precli.rules.python.stdlib.pickle.pickle_load:PickleLoad
+    PRE009 = precli.rules.python.stdlib.pickle.pickle_load:PickleLoad
 
     # precli/rules/python/stdlib/shelve/shelve_open.py
-    PRE009 = precli.rules.python.stdlib.shelve.shelve_open:ShelveOpen
+    PRE010 = precli.rules.python.stdlib.shelve.shelve_open:ShelveOpen
 
     # precli/rules/python/stdlib/ssl/create_unverified_context.py
-    PRE010 = precli.rules.python.stdlib.ssl.create_unverified_context:CreateUnverifiedContext
+    PRE011 = precli.rules.python.stdlib.ssl.create_unverified_context:CreateUnverifiedContext
 
     # precli/rules/python/stdlib/ssl/insecure_tls_version.py
-    PRE011 = precli.rules.python.stdlib.ssl.insecure_tls_version:InsecureTlsVersion
+    PRE012 = precli.rules.python.stdlib.ssl.insecure_tls_version:InsecureTlsVersion
 
     # precli/rules/python/stdlib/telnetlib/telnetlib_cleartext.py
-    PRE012 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
+    PRE013 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
 
     # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
     PRE301 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
