Add fixes and tests for ftplib
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,8 +36,8 @@ precli.rules.python =
     # precli/rules/python/stdlib/crypt/crypt_weak_hash.py
     PRE002 = precli.rules.python.stdlib.crypt.crypt_weak_hash:CryptWeakHash
 
-    # precli/rules/python/stdlib/ftplib/ftplib_cleartext.py
-    PRE003 = precli.rules.python.stdlib.ftplib.ftplib_cleartext:FtplibCleartext
+    # precli/rules/python/stdlib/ftplib/ftp_cleartext.py
+    PRE003 = precli.rules.python.stdlib.ftplib.ftp_cleartext:FtpCleartext
 
     # precli/rules/python/stdlib/hashlib/hashlib_weak_hash.py
     PRE004 = precli.rules.python.stdlib.hashlib.hashlib_weak_hash:HashlibWeakHash
