--- a/.github/workflows/upload-asset.yml
+++ b/.github/workflows/upload-asset.yml
@@ -27,5 +27,5 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
-          build/*.whl
-          build/*.tar.gz
+          dist/*.whl
+          dist/*.tar.gz
