--- a/setup.cfg
+++ b/setup.cfg
@@ -107,5 +107,5 @@ precli.rules.python =
 
 [build_sphinx]
 all_files = 1
-build-dir = doc/build
-source-dir = doc/source
+build-dir = docs/build
+source-dir = docs/source
