--- a/tox.ini
+++ b/tox.ini
@@ -37,3 +37,8 @@ commands = flake8 {posargs} precli
 
 [testenv:pylint]
 commands = -pylint --rcfile=pylintrc precli
+
+[testenv:docs]
+deps = -r{toxinidir}/docs/requirements.txt
+commands=
+    sphinx-build -b html docs/source docs/build
