Add ability to enable or disable rules
* Added --enable CLI argument. Can take a comma seperated list of
 rule IDs, names, or special value of just "all"
* Also added --disable CLI argument that does the opposite of enable.
* The third-party rules are now by default off.
* Generates doc output as JSON instead of HTML

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/tox.ini
+++ b/tox.ini
@@ -41,4 +41,4 @@ commands = -pylint --rcfile=pylintrc precli
 [testenv:docs]
 deps = -r{toxinidir}/docs/requirements.txt
 commands=
-    sphinx-build -b html docs/source docs/build
+    sphinx-build -b json docs/source docs/build
