--- a/setup.cfg
+++ b/setup.cfg
@@ -42,68 +42,71 @@ precli.rules.python =
     # precli/rules/python/stdlib/hashlib/hashlib_weak_hash.py
     PRE0004 = precli.rules.python.stdlib.hashlib.hashlib_weak_hash:HashlibWeakHash
 
+    # precli/rules/python/stdlib/hmac/hmac_timing_attack.py
+    PRE0005 = precli.rules.python.stdlib.hmac.hmac_timing_attack:HmacTimingAttack
+
     # precli/rules/python/stdlib/hmac/hmac_weak_hash.py
-    PRE0005 = precli.rules.python.stdlib.hmac.hmac_weak_hash:HmacWeakHash
+    PRE0006 = precli.rules.python.stdlib.hmac.hmac_weak_hash:HmacWeakHash
 
     # precli/rules/python/stdlib/json/json_load.py
-    PRE0006 = precli.rules.python.stdlib.json.json_load:JsonLoad
+    PRE0007 = precli.rules.python.stdlib.json.json_load:JsonLoad
 
     # precli/rules/python/stdlib/logging/insecure_listen_config.py
-    PRE0007 = precli.rules.python.stdlib.logging.insecure_listen_config:InsecureListenConfig
+    PRE0008 = precli.rules.python.stdlib.logging.insecure_listen_config:InsecureListenConfig
 
     # precli/rules/python/stdlib/marshal/marshal_load.py
-    PRE0008 = precli.rules.python.stdlib.marshal.marshal_load:MarshalLoad
+    PRE0009 = precli.rules.python.stdlib.marshal.marshal_load:MarshalLoad
 
     # precli/rules/python/stdlib/pickle/pickle_load.py
-    PRE0009 = precli.rules.python.stdlib.pickle.pickle_load:PickleLoad
+    PRE0010 = precli.rules.python.stdlib.pickle.pickle_load:PickleLoad
 
     # precli/rules/python/stdlib/shelve/shelve_open.py
-    PRE0010 = precli.rules.python.stdlib.shelve.shelve_open:ShelveOpen
+    PRE0011 = precli.rules.python.stdlib.shelve.shelve_open:ShelveOpen
 
     # precli/rules/python/stdlib/ssl/create_unverified_context.py
-    PRE0011 = precli.rules.python.stdlib.ssl.create_unverified_context:CreateUnverifiedContext
+    PRE0012 = precli.rules.python.stdlib.ssl.create_unverified_context:CreateUnverifiedContext
 
     # precli/rules/python/stdlib/ssl/insecure_tls_version.py
-    PRE0012 = precli.rules.python.stdlib.ssl.insecure_tls_version:InsecureTlsVersion
+    PRE0013 = precli.rules.python.stdlib.ssl.insecure_tls_version:InsecureTlsVersion
 
     # precli/rules/python/stdlib/telnetlib/telnetlib_cleartext.py
-    PRE0013 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
+    PRE0014 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
 
     # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
-    PRE0014 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
+    PRE0015 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
 
     # precli/rules/python/third_party/dill/dill_load.py
-    PRE0015 = precli.rules.python.third_party.dill.dill_load:DillLoad
+    PRE0016 = precli.rules.python.third_party.dill.dill_load:DillLoad
 
     # precli/rules/python/third_party/httpx/no_certificate_verify.py
-    PRE0016 = precli.rules.python.third_party.httpx.no_certificate_verify:NoCertificateVerify
+    PRE0017 = precli.rules.python.third_party.httpx.no_certificate_verify:NoCertificateVerify
 
     # precli/rules/python/third_party/jsonpickle/jsonpickle_decode.py
-    PRE0017 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
+    PRE0018 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
 
     # precli/rules/python/third_party/pandas/pandas_read_pickle.py
-    PRE0018 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
+    PRE0019 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
 
     # precli/rules/python/third_party/paramiko/paramiko_no_host_key_verify.py
-    PRE0019 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
+    PRE0020 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
 
     # precli/rules/python/third_party/pyghmi/pyghmi_cleartext.py
-    PRE0020 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
+    PRE0021 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
-    PRE0021 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    PRE0022 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
-    PRE0022 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    PRE0023 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
     # precli/rules/python/third_party/pyopenssl/insecure_tls_method.py
-    PRE0023 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
+    PRE0024 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
 
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    PRE0024 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    PRE0025 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
     # precli/rules/python/third_party/requests/no_certificate_verify.py
-    PRE0025 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
+    PRE0026 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
 
 [build_sphinx]
 all_files = 1
