Start using pre-commit
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: ^(examples|tools|doc)
+exclude: ^(examples|tools|docs)
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.4.0
@@ -11,7 +11,7 @@ repos:
   rev: v3.9.0
   hooks:
   - id: reorder-python-imports
-    args: [--application-directories, '.:src', --py37-plus]
+    args: [--application-directories, '.:src', --py38-plus]
 - repo: https://github.com/psf/black
   rev: 23.3.0
   hooks:
@@ -21,7 +21,7 @@ repos:
   rev: v3.3.2
   hooks:
   - id: pyupgrade
-    args: [--py37-plus]
+    args: [--py38-plus]
 - repo: https://github.com/jorisroovers/gitlint
   rev: v0.19.1
   hooks:
