--- a/setup.cfg
+++ b/setup.cfg
@@ -90,38 +90,41 @@ precli.rules.python =
     # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
     PRE0501 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
 
+    # precli/rules/python/third_party/cryptography/cryptography_weak_key.py
+    PRE0502 = precli.rules.python.third_party.cryptography.cryptography_weak_key:CryptographyWeakKey
+
     # precli/rules/python/third_party/dill/dill_load.py
-    PRE0502 = precli.rules.python.third_party.dill.dill_load:DillLoad
+    PRE0503 = precli.rules.python.third_party.dill.dill_load:DillLoad
 
     # precli/rules/python/third_party/httpx/no_certificate_verify.py
-    PRE0503 = precli.rules.python.third_party.httpx.no_certificate_verify:NoCertificateVerify
+    PRE0504 = precli.rules.python.third_party.httpx.no_certificate_verify:NoCertificateVerify
 
     # precli/rules/python/third_party/jsonpickle/jsonpickle_decode.py
-    PRE0504 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
+    PRE0505 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
 
     # precli/rules/python/third_party/pandas/pandas_read_pickle.py
-    PRE0505 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
+    PRE0506 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
 
     # precli/rules/python/third_party/paramiko/paramiko_no_host_key_verify.py
-    PRE0506 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
+    PRE0507 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
-    PRE0507 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    PRE0508 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
-    PRE0508 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    PRE0509 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
     # precli/rules/python/third_party/pyghmi/pyghmi_cleartext.py
-    PRE0509 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
+    PRE0510 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
 
     # precli/rules/python/third_party/pyopenssl/insecure_tls_method.py
-    PRE0510 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
+    PRE0511 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
 
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    PRE0511 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    PRE0512 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
     # precli/rules/python/third_party/requests/no_certificate_verify.py
-    PRE0512 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
+    PRE0513 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
 
 [build_sphinx]
 all_files = 1
