--- a/setup.cfg
+++ b/setup.cfg
@@ -114,23 +114,35 @@ precli.rules.python =
     # precli/rules/python/third_party/paramiko/paramiko_no_host_key_verify.py
     PRE0509 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
 
+    # precli/rules/python/third_party/pycrypto/pycrypto_weak_cipher.py
+    PRE0510 = precli.rules.python.third_party.pycrypto.pycrypto_weak_cipher:PycryptoWeakCipher
+
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
-    PRE0510 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    PRE0511 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+
+    # precli/rules/python/third_party/pycrypto/pycrypto_weak_key.py
+    PRE0512 = precli.rules.python.third_party.pycrypto.pycrypto_weak_key:PycryptoWeakKey
+
+    # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_cipher.py
+    PRE0513 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_cipher:PycryptodomexWeakCipher
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
-    PRE0511 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    PRE0514 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+
+    # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_key.py
+    PRE0515 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_key:PycryptodomexWeakKey
 
     # precli/rules/python/third_party/pyghmi/pyghmi_cleartext.py
-    PRE0512 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
+    PRE0516 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
 
     # precli/rules/python/third_party/pyopenssl/insecure_tls_method.py
-    PRE0513 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
+    PRE0517 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
 
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    PRE0514 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    PRE0518 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
     # precli/rules/python/third_party/requests/no_certificate_verify.py
-    PRE0515 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
+    PRE0519 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
 
 [build_sphinx]
 all_files = 1
