Add rule for PyOpenSSL RSA and DSA key generation
* Checks function OpenSSL.crypto.PKey().generate_key
* Looks for weak keys being initialized

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -138,11 +138,14 @@ precli.rules.python =
     # precli/rules/python/third_party/pyopenssl/insecure_tls_method.py
     PRE0517 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
 
+    # precli/rules/python/third_party/pyopenssl/pyopenssl_weak_key.py
+    PRE0518 = precli.rules.python.third_party.pyopenssl.pyopenssl_weak_key:PyopensslWeakKey
+
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    PRE0518 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    PRE0519 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
     # precli/rules/python/third_party/requests/no_certificate_verify.py
-    PRE0519 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
+    PRE0520 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
 
 [build_sphinx]
 all_files = 1
