Add rule for m2crypto weak keys
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -108,44 +108,47 @@ precli.rules.python =
     # precli/rules/python/third_party/jsonpickle/jsonpickle_decode.py
     PRE0507 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
 
+    # precli/rules/python/third_party/M2Crypto/m2crypto_weak_key.py
+    PRE0508 = precli.rules.python.third_party.M2Crypto.m2crypto_weak_key:M2CryptoWeakKey
+
     # precli/rules/python/third_party/pandas/pandas_read_pickle.py
-    PRE0508 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
+    PRE0509 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
 
     # precli/rules/python/third_party/paramiko/paramiko_no_host_key_verify.py
-    PRE0509 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
+    PRE0510 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_cipher.py
-    PRE0510 = precli.rules.python.third_party.pycrypto.pycrypto_weak_cipher:PycryptoWeakCipher
+    PRE0511 = precli.rules.python.third_party.pycrypto.pycrypto_weak_cipher:PycryptoWeakCipher
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
-    PRE0511 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    PRE0512 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_key.py
-    PRE0512 = precli.rules.python.third_party.pycrypto.pycrypto_weak_key:PycryptoWeakKey
+    PRE0513 = precli.rules.python.third_party.pycrypto.pycrypto_weak_key:PycryptoWeakKey
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_cipher.py
-    PRE0513 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_cipher:PycryptodomexWeakCipher
+    PRE0514 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_cipher:PycryptodomexWeakCipher
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
-    PRE0514 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    PRE0515 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_key.py
-    PRE0515 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_key:PycryptodomexWeakKey
+    PRE0516 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_key:PycryptodomexWeakKey
 
     # precli/rules/python/third_party/pyghmi/pyghmi_cleartext.py
-    PRE0516 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
+    PRE0517 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
 
     # precli/rules/python/third_party/pyopenssl/insecure_tls_method.py
-    PRE0517 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
+    PRE0518 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
 
     # precli/rules/python/third_party/pyopenssl/pyopenssl_weak_key.py
-    PRE0518 = precli.rules.python.third_party.pyopenssl.pyopenssl_weak_key:PyopensslWeakKey
+    PRE0519 = precli.rules.python.third_party.pyopenssl.pyopenssl_weak_key:PyopensslWeakKey
 
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    PRE0519 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    PRE0520 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
     # precli/rules/python/third_party/requests/no_certificate_verify.py
-    PRE0520 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
+    PRE0521 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
 
 [build_sphinx]
 all_files = 1
