--- a/setup.cfg
+++ b/setup.cfg
@@ -87,68 +87,71 @@ precli.rules.python =
     # precli/rules/python/stdlib/tempfile/mktemp_race_condition.py
     PRE0019 = precli.rules.python.stdlib.tempfile.mktemp_race_condition:MktempRaceCondition
 
+    # precli/rules/python/third_party/aiohttp/no_certificate_verify.py
+    PRE0501 = precli.rules.python.third_party.aiohttp.no_certificate_verify:NoCertificateVerify
+
     # precli/rules/python/third_party/cryptography/cryptography_weak_cipher.py
-    PRE0501 = precli.rules.python.third_party.cryptography.cryptography_weak_cipher:CryptographyWeakCipher
+    PRE0502 = precli.rules.python.third_party.cryptography.cryptography_weak_cipher:CryptographyWeakCipher
 
     # precli/rules/python/third_party/cryptography/cryptography_weak_cipher_mode.py
-    PRE0502 = precli.rules.python.third_party.cryptography.cryptography_weak_cipher_mode:CryptographyWeakCipherMode
+    PRE0503 = precli.rules.python.third_party.cryptography.cryptography_weak_cipher_mode:CryptographyWeakCipherMode
 
     # precli/rules/python/third_party/cryptography/cryptography_weak_hash.py
-    PRE0503 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
+    PRE0504 = precli.rules.python.third_party.cryptography.cryptography_weak_hash:CryptographyWeakHash
 
     # precli/rules/python/third_party/cryptography/cryptography_weak_key.py
-    PRE0504 = precli.rules.python.third_party.cryptography.cryptography_weak_key:CryptographyWeakKey
+    PRE0505 = precli.rules.python.third_party.cryptography.cryptography_weak_key:CryptographyWeakKey
 
     # precli/rules/python/third_party/dill/dill_load.py
-    PRE0505 = precli.rules.python.third_party.dill.dill_load:DillLoad
+    PRE0506 = precli.rules.python.third_party.dill.dill_load:DillLoad
 
     # precli/rules/python/third_party/httpx/no_certificate_verify.py
-    PRE0506 = precli.rules.python.third_party.httpx.no_certificate_verify:NoCertificateVerify
+    PRE0507 = precli.rules.python.third_party.httpx.no_certificate_verify:NoCertificateVerify
 
     # precli/rules/python/third_party/jsonpickle/jsonpickle_decode.py
-    PRE0507 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
+    PRE0508 = precli.rules.python.third_party.jsonpickle.jsonpickle_decode:JsonpickleDecode
 
     # precli/rules/python/third_party/M2Crypto/m2crypto_weak_key.py
-    PRE0508 = precli.rules.python.third_party.M2Crypto.m2crypto_weak_key:M2CryptoWeakKey
+    PRE0509 = precli.rules.python.third_party.M2Crypto.m2crypto_weak_key:M2CryptoWeakKey
 
     # precli/rules/python/third_party/pandas/pandas_read_pickle.py
-    PRE0509 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
+    PRE0510 = precli.rules.python.third_party.pandas.pandas_read_pickle:PandasReadPickle
 
     # precli/rules/python/third_party/paramiko/paramiko_no_host_key_verify.py
-    PRE0510 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
+    PRE0511 = precli.rules.python.third_party.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_cipher.py
-    PRE0511 = precli.rules.python.third_party.pycrypto.pycrypto_weak_cipher:PycryptoWeakCipher
+    PRE0512 = precli.rules.python.third_party.pycrypto.pycrypto_weak_cipher:PycryptoWeakCipher
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_hash.py
-    PRE0512 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    PRE0513 = precli.rules.python.third_party.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
 
     # precli/rules/python/third_party/pycrypto/pycrypto_weak_key.py
-    PRE0513 = precli.rules.python.third_party.pycrypto.pycrypto_weak_key:PycryptoWeakKey
+    PRE0514 = precli.rules.python.third_party.pycrypto.pycrypto_weak_key:PycryptoWeakKey
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_cipher.py
-    PRE0514 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_cipher:PycryptodomexWeakCipher
+    PRE0515 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_cipher:PycryptodomexWeakCipher
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_hash.py
-    PRE0515 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    PRE0516 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
     # precli/rules/python/third_party/pycryptodomex/pycryptodomex_weak_key.py
-    PRE0516 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_key:PycryptodomexWeakKey
+    PRE0517 = precli.rules.python.third_party.pycryptodomex.pycryptodomex_weak_key:PycryptodomexWeakKey
 
     # precli/rules/python/third_party/pyghmi/pyghmi_cleartext.py
-    PRE0517 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
+    PRE0518 = precli.rules.python.third_party.pyghmi.pyghmi_cleartext:PyghmiCleartext
 
     # precli/rules/python/third_party/pyopenssl/insecure_tls_method.py
-    PRE0518 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
+    PRE0519 = precli.rules.python.third_party.pyopenssl.insecure_tls_method:InsecureTlsMethod
 
     # precli/rules/python/third_party/pyopenssl/pyopenssl_weak_key.py
-    PRE0519 = precli.rules.python.third_party.pyopenssl.pyopenssl_weak_key:PyopensslWeakKey
+    PRE0520 = precli.rules.python.third_party.pyopenssl.pyopenssl_weak_key:PyopensslWeakKey
 
     # precli/rules/python/third_party/PyYAML/yaml_load.py
-    PRE0520 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
+    PRE0521 = precli.rules.python.third_party.PyYAML.yaml_load:YamlLoad
 
     # precli/rules/python/third_party/requests/no_certificate_verify.py
-    PRE0521 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
+    PRE0522 = precli.rules.python.third_party.requests.no_certificate_verify:NoCertificateVerify
 
 [build_sphinx]
 all_files = 1
