Implement Go parser and one example rule
* Parse Go code with new parser
* Add the ssh_insecure_ignore_hostkey rule to detect use of
  ssh.InsecureIgnoreHostKey

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,11 +23,18 @@ console_scripts =
     precli = precli.cli.main:main
 
 precli.parsers =
+    # precli/parsers/go.py
+    go = precli.parsers.go:Go
+
     # precli/parsers/java.py
     java = precli.parsers.java:Java
 
     # precli/parsers/python.py
     python = precli.parsers.python:Python
+
+precli.rules.go =
+    # precli/rules/go/golang_org_x_crypto_ssh/ssh_insecure_ignore_hostkey.py
+    PRE1501 = precli.rules.go.golang_org_x_crypto_ssh.ssh_insecure_ignore_hostkey:SshInsecureIgnoreHostKey
 
 precli.rules.python =
     # precli/rules/python/stdlib/assert/assert.py
