golang_org_x_crypto_ssh to golang_org_x_crypto
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,8 +33,8 @@ precli.parsers =
     python = precli.parsers.python:Python
 
 precli.rules.go =
-    # precli/rules/go/golang_org_x_crypto_ssh/ssh_insecure_ignore_hostkey.py
-    GO501 = precli.rules.go.golang_org_x_crypto_ssh.ssh_insecure_ignore_hostkey:SshInsecureIgnoreHostKey
+    # precli/rules/go/golang_org_x_crypto/ssh_insecure_ignore_hostkey.py
+    GO501 = precli.rules.go.golang_org_x_crypto.ssh_insecure_ignore_hostkey:SshInsecureIgnoreHostKey
 
 precli.rules.python =
     # precli/rules/python/stdlib/assert/assert.py
