Add weak hash Go rule
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,8 +33,11 @@ precli.parsers =
     python = precli.parsers.python:Python
 
 precli.rules.go =
+    # precli/rules/go/stdlib/crypto/weak_cipher.py
+    GO001 = precli.rules.go.stdlib.crypto.weak_cipher:WeakCipher
+
     # precli/rules/go/stdlib/crypto/weak_hash.py
-    GO001 = precli.rules.go.stdlib.crypto.weak_hash:WeakHash
+    GO002 = precli.rules.go.stdlib.crypto.weak_hash:WeakHash
 
     # precli/rules/go/golang_org_x_crypto/ssh_insecure_ignore_hostkey.py
     GO501 = precli.rules.go.golang_org_x_crypto.ssh_insecure_ignore_hostkey:SshInsecureIgnoreHostKey
