Add Go rule for md4 and ripemd160 weak hashes
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,9 @@ precli.rules.go =
     # precli/rules/go/golang_org_x_crypto/ssh_insecure_ignore_hostkey.py
     GO501 = precli.rules.go.golang_org_x_crypto.ssh_insecure_ignore_hostkey:SshInsecureIgnoreHostKey
 
+    # precli/rules/go/golang_org_x_crypto/weak_hash.py
+    GO502 = precli.rules.go.golang_org_x_crypto.weak_hash:WeakHash
+
 precli.rules.python =
     # precli/rules/python/stdlib/assert/assert.py
     PY001 = precli.rules.python.stdlib.assert.assert:Assert
