Add Go rule for weak rsa and dsa key sizes
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,9 @@ precli.rules.go =
     # precli/rules/go/stdlib/crypto/weak_hash.py
     GO002 = precli.rules.go.stdlib.crypto.weak_hash:WeakHash
 
+    # precli/rules/go/stdlib/crypto/weak_key.py
+    GO003 = precli.rules.go.stdlib.crypto.weak_key:WeakKey
+
     # precli/rules/go/golang_org_x_crypto/ssh_insecure_ignore_hostkey.py
     GO501 = precli.rules.go.golang_org_x_crypto.ssh_insecure_ignore_hostkey:SshInsecureIgnoreHostKey
 
