Add golang_org_x_weak_cipher and testing
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,8 +45,11 @@ precli.rules.go =
     # precli/rules/go/golang_org_x_crypto/ssh_insecure_ignore_hostkey.py
     GO501 = precli.rules.go.golang_org_x_crypto.ssh_insecure_ignore_hostkey:SshInsecureIgnoreHostKey
 
+    # precli/rules/go/golang_org_x_crypto/weak_cipher.py
+    GO502 = precli.rules.go.golang_org_x_crypto.weak_cipher:WeakCipher
+
     # precli/rules/go/golang_org_x_crypto/weak_hash.py
-    GO502 = precli.rules.go.golang_org_x_crypto.weak_hash:WeakHash
+    GO503 = precli.rules.go.golang_org_x_crypto.weak_hash:WeakHash
 
 precli.rules.python =
     # precli/rules/python/stdlib/assert/assert.py
