--- a/.github/workflows/upload-asset.yml
+++ b/.github/workflows/upload-asset.yml
@@ -16,7 +16,7 @@ jobs:
         python-version: 3.12
 
     - name: Install dependencies
-      run: pip install wheel
+      run: pip install setuptools wheel
 
     - name: Build a binary wheel and a source tarball
       run: |
