--- a/setup.cfg
+++ b/setup.cfg
@@ -127,53 +127,56 @@ precli.rules.python =
     # precli/rules/python/dill/dill_load.py
     PY506 = precli.rules.python.dill.dill_load:DillLoad
 
+    # precli/rules/python/Flask/flask_run_debug.py
+    PY507 = precli.rules.python.Flask.flask_run_debug:FlaskRunDebug
+
     # precli/rules/python/httpx/no_certificate_verify.py
-    PY507 = precli.rules.python.httpx.no_certificate_verify:NoCertificateVerify
+    PY508 = precli.rules.python.httpx.no_certificate_verify:NoCertificateVerify
 
     # precli/rules/python/jsonpickle/jsonpickle_decode.py
-    PY508 = precli.rules.python.jsonpickle.jsonpickle_decode:JsonpickleDecode
+    PY509 = precli.rules.python.jsonpickle.jsonpickle_decode:JsonpickleDecode
 
     # precli/rules/python/M2Crypto/m2crypto_weak_key.py
-    PY509 = precli.rules.python.M2Crypto.m2crypto_weak_key:M2CryptoWeakKey
+    PY510 = precli.rules.python.M2Crypto.m2crypto_weak_key:M2CryptoWeakKey
 
     # precli/rules/python/pandas/pandas_read_pickle.py
-    PY510 = precli.rules.python.pandas.pandas_read_pickle:PandasReadPickle
+    PY511 = precli.rules.python.pandas.pandas_read_pickle:PandasReadPickle
 
     # precli/rules/python/paramiko/paramiko_no_host_key_verify.py
-    PY511 = precli.rules.python.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
+    PY512 = precli.rules.python.paramiko.paramiko_no_host_key_verify:ParamikoNoHostKeyVerify
 
     # precli/rules/python/pycrypto/pycrypto_weak_cipher.py
-    PY512 = precli.rules.python.pycrypto.pycrypto_weak_cipher:PycryptoWeakCipher
+    PY513 = precli.rules.python.pycrypto.pycrypto_weak_cipher:PycryptoWeakCipher
 
     # precli/rules/python/pycrypto/pycrypto_weak_hash.py
-    PY513 = precli.rules.python.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
+    PY514 = precli.rules.python.pycrypto.pycrypto_weak_hash:PycryptoWeakHash
 
     # precli/rules/python/pycrypto/pycrypto_weak_key.py
-    PY514 = precli.rules.python.pycrypto.pycrypto_weak_key:PycryptoWeakKey
+    PY515 = precli.rules.python.pycrypto.pycrypto_weak_key:PycryptoWeakKey
 
     # precli/rules/python/pycryptodomex/pycryptodomex_weak_cipher.py
-    PY515 = precli.rules.python.pycryptodomex.pycryptodomex_weak_cipher:PycryptodomexWeakCipher
+    PY516 = precli.rules.python.pycryptodomex.pycryptodomex_weak_cipher:PycryptodomexWeakCipher
 
     # precli/rules/python/pycryptodomex/pycryptodomex_weak_hash.py
-    PY516 = precli.rules.python.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
+    PY517 = precli.rules.python.pycryptodomex.pycryptodomex_weak_hash:PycryptodomexWeakHash
 
     # precli/rules/python/pycryptodomex/pycryptodomex_weak_key.py
-    PY517 = precli.rules.python.pycryptodomex.pycryptodomex_weak_key:PycryptodomexWeakKey
+    PY518 = precli.rules.python.pycryptodomex.pycryptodomex_weak_key:PycryptodomexWeakKey
 
     # precli/rules/python/pyghmi/pyghmi_cleartext.py
-    PY518 = precli.rules.python.pyghmi.pyghmi_cleartext:PyghmiCleartext
+    PY519 = precli.rules.python.pyghmi.pyghmi_cleartext:PyghmiCleartext
 
     # precli/rules/python/pyopenssl/insecure_tls_method.py
-    PY519 = precli.rules.python.pyopenssl.insecure_tls_method:InsecureTlsMethod
+    PY520 = precli.rules.python.pyopenssl.insecure_tls_method:InsecureTlsMethod
 
     # precli/rules/python/pyopenssl/pyopenssl_weak_key.py
-    PY520 = precli.rules.python.pyopenssl.pyopenssl_weak_key:PyopensslWeakKey
+    PY521 = precli.rules.python.pyopenssl.pyopenssl_weak_key:PyopensslWeakKey
 
     # precli/rules/python/PyYAML/yaml_load.py
-    PY521 = precli.rules.python.PyYAML.yaml_load:YamlLoad
+    PY522 = precli.rules.python.PyYAML.yaml_load:YamlLoad
 
     # precli/rules/python/requests/no_certificate_verify.py
-    PY522 = precli.rules.python.requests.no_certificate_verify:NoCertificateVerify
+    PY523 = precli.rules.python.requests.no_certificate_verify:NoCertificateVerify
 
 [build_sphinx]
 all_files = 1
